Models, repositories en services errors weggewerkt zoveel mogelijk. Authority repository vewijderd, werd nooit gebruikt. Alle endpoints werken nog in Postman, op naar exceptioncontroller implementation